--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>NgApp</title>
   <base href="/">
+  <!-- Bootstrap-Bootswatch Cosmo theme -->
+<link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
