--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,17 @@
   <meta charset="utf-8">
   <title>NgApp</title>
   <base href="/">
-  <!-- Bootstrap-Bootswatch Cosmo theme -->
-<link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
+  <!-- Bootstrap-Bootswatch cosmo theme -->
+  <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
